Some minor adds and fixes
Added Ad banner for landing page
Changed copyright info
Minor adjustments to background item bouncing range limit to stop from going too far to the right
Changed navbar color and font settings
added cursor pointer to dashboard discount banner

--- a/Frontend/Dashboard/style.css
+++ b/Frontend/Dashboard/style.css
@@ -440,6 +440,7 @@ button:hover {
     text-align: center;
     flex-direction: column;
     display: flex; /* Flex layout */
+    cursor: pointer;
 }
 
 /* Images in carousel items */
